# sipl

./: .clang-format  .gitignore  CMakeLists.txt  bmp_test.cpp  diff.py  edge.cpp  filter_test.cpp  histogram.cpp  hw4.py  matrix_test.cpp  readme.txt  test.cpp  vector_test.cpp
examples/: arraytest.cpp  edge.cpp  filter_test.cpp  matrix_test.cpp  ndarraytest.cpp  pngtest.cpp  test.cpp  vector_test.cpp
include/: Common.hpp  Constants.hpp  Util.hpp
include/array/: array.hpp  static_array.hpp  util.hpp
include/improc/: BilinearInterpolator.hpp  Filter.hpp  Histogram.hpp  Image.hpp  Improc  Improc.hpp  Kernels.hpp  Label.hpp  Morphology.hpp  NearestNeighborInterpolator.hpp  Transform.hpp  Utility.hpp
include/io/: BmpIO.hpp  IOBase.hpp  ImageIO.hpp  NetpbmIOBase.hpp  PGMIO.hpp  PGMReader.hpp  PgmIO.hpp  PngIO.hpp  PpmIO.hpp
include/matrix/: Common.hpp  Matrix  Matrix.hpp  MatrixBase.hpp  MatrixOps.hpp  Statistics.hpp  Vector  Vector.hpp  VectorBase.hpp  VectorOps.hpp  Wrappers.hpp
include/ndarray/: ndarray.hpp  util.hpp
io/include/: PGMReader.hpp  PPMReader.hpp
io/src/: PGMReader.cpp
src/: CMakeLists.txt
src/improc/: Improc.cpp
src/io/: BmpIO.cpp  CMakeLists.txt  NetpbmIOBase.cpp  PGMIO.cpp  PGMReader.cpp  PgmIO.cpp  PngIO.cpp  PpmIO.cpp
src/matrix/: CMakeLists.txt
